--- a/NUNIT_1/NUNIT_1.csproj
+++ b/NUNIT_1/NUNIT_1.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ScientificCalculatorTests.cs">
+      <IncludeInPackage>false</IncludeInPackage>
+    </Compile>
+  </ItemGroup>
 </Project>
