Added Setup and tearDown

--- a/OOP_SqareCircle/OOP_SqareCircle.csproj
+++ b/OOP_SqareCircle/OOP_SqareCircle.csproj
@@ -12,5 +12,7 @@
     <Compile Remove="ISquareFit.cs" />
     <Compile Remove="SquareCircle2.cs" />
     <Compile Remove="SquareCircle2.cs" />
+    <Compile Remove="Validation.cs" />
+    <Compile Remove="Validation.cs" />
   </ItemGroup>
 </Project>
